--- a/gb/24/10/9/n14347309.md
+++ b/gb/24/10/9/n14347309.md
@@ -1,15 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>富士康4台干遭中共拘捕</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>富士康4台籍干部遭中共拘捕 陆委会：情节怪异</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347310-714809-600x400.jpg" />
 <h6>民进党立委陈冠廷呼吁，中共应立即释放这些无辜的台湾公民，确保他们的基本人权，并允许家属探视。（陈冠廷提供）
 </h6>
 <hr>
 <p>【大纪元2024年10月09日讯】（大纪元记者吴旻洲、戴德蔓台湾台北报导）外传富士康4名台籍干部于今年1月起，陆续遭中共公安以“非公收贿”罪名带走；台塑集团一名高阶主管今年9月入境中国，也遭公安盘查“边境控制”，至今仍未返台。立委陈冠廷9日发表严正声明，强调中国已成为台湾人的危险之地，呼吁民众没必要不要进入中国。</p>
-<figure id="14347314" aria-describedby="caption-14347314" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14347314-714813-450x299.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347314-714813-450x299.jpg" alt="图为富士康的工厂。" width="601" b="399" /></a><figcaption id="caption-14347314" class="wp-caption-text">图为富士康的工厂。（AFP）</figcaption></figure>
-<figure id="14347313" aria-describedby="caption-14347313" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14347313-714812-450x283.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347313-714812-450x283.jpg" alt="富士康标志。" width="600" b="377" /></a><figcaption id="caption-14347313" class="wp-caption-text">富士康标志。（Sam YEH/AFP）</figcaption></figure>
-<figure id="14347312" aria-describedby="caption-14347312" style="width: 599px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14347312-714811-450x371.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347312-714811-450x371.jpg" alt="图为富士康标志。" width="599" b="494" /></a><figcaption id="caption-14347312" class="wp-caption-text">图为富士康标志。（PATRICK LIN/AFP）</figcaption></figure>
+<figure id="14347314" aria-describedby="caption-14347314" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14347314-714813-450x299.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347314-714813-450x299.jpg" alt="图为富士康的工厂。" width="601" b="399" /></a><figcaption id="caption-14347314" class="wp-caption-text">图为富士康的工厂内部。(AFP)</figcaption></figure>
+<figure id="14347312" aria-describedby="caption-14347312" style="width: 599px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14347312-714811-450x371.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347312-714811-450x371.jpg" alt="图为富士康标志。" width="599" b="494" /></a><figcaption id="caption-14347312" class="wp-caption-text">图为富士康标志。(Patrick Lin/AFP)</figcaption></figure>
 <p>对此，海基会副秘长蔡孟君证实，确实有此事发生，海基会有与富士康、当事人家属曾三度开会讨论，提供相关咨询。后续将视家属需求，提供相关必要协助；鸿海集团负责公关的资深专员蔡浩祥则说，鸿海方面不做任何回应。</p>
 <p>陆委会表示，此案情节相当怪异，但详细案情要询问鸿海公司。郑州公安以相当于台湾的“背信罪”为由拘留鸿海4名员工，但鸿海声明公司毫无损失，该4名员工也毫无伤害公司利益的情事，鸿海也未向中国公安报案。家属担心万一4人遭地方公安胡乱起诉，恐怕会成为冤狱，期盼台湾鸿海能协助处理。</p>
 <h2>查不到收贿金流证据?陆委会：情节相当怪异</h2>
@@ -26,43 +25,41 @@
 <p>他以台塑集团高管遭“边境控制”事件为例，“一名台塑集团高层管理干部9月1日抵达上海后，即遭国安人员盘查一整晚，虽然随后获释，但却无法离境返台。这再次证明了在中国，台湾民众随时可能面临人身自由被限制的风险。”</p>
 <p>陈冠廷强调，中共这种任意拘禁台湾民众的行为，严重违反国际人权公约。他呼吁，中共应立即释放这些无辜的台湾公民，确保他们的基本人权，并允许家属探视。</p>
 <p>“我再次呼吁所有台湾民众，没有必要，不要进入中国。”陈冠廷表示，“中共近年来对台湾的敌意与日俱增，台湾民众在中国的处境日益艰难。为了自身安全，请慎重考虑赴中国工作、经商或旅游的必要性。”</p>
-<p>他也呼吁台湾政府相关单位，应更积极主动的介入协助在中国遭遇不当对待的台湾民众。他建议，政府应建立跨部会的紧急应变机制，并强化与中共相关部门的沟通管道，以更有效的保护我国公民在中国的权益。同时，他也呼吁，政府应该加强对民众的宣导，提醒赴中可能面临的各种风险。◇</p>
-<p>责任编辑：陈玟绮</p>
+<p>他也呼吁台湾政府相关单位，应更积极主动地介入协助在中国遭遇不当对待的台湾民众。他建议，政府应建立跨部会的紧急应变机制，并强化与中共相关部门的沟通管道，以更有效地保护台湾公民在中国的权益。同时，他也呼吁，政府应该加强对民众的宣导，提醒赴中可能面临的各种风险。◇</p>
+<p>责任编辑：陈玟绮#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/3/19/n4391738.md#1">干部疑监守自盗iPhone 6 鸿海稽核抓包</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/17/n10491293.md#1">在中国上市得设党支部 台企称新规倒退如文革</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/11/n10844915.md#1">【台商快逃专题】台商到中国圆梦还是入坑 中共不敢公开的事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/5/11/n12099753.md#1">苹果拟迁20%产能至印度 投资台湾3亿美元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/4/29/n12914370.md#1">打击中共挖角芯片人才 台湾阻中介为大陆招人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347318.md#1">6成民众认为共军不可能5年内攻台</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347130.md#1">基隆市长罢免门槛7万7,700人 重阳礼品夹文宣检方要查</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347126.md#1">影城播《国有器官》遭恐吓取消 陈其迈：强力查察</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347069.md#1">一页式广告标高雄名产却卖中国食品 卫生局主动调查</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346684.md#1">感谢台湾协助翻转人生 史瓦帝尼妇人将女儿取名“Taiwan”</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/15/n10977767.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(3) 骑向自由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/25/n11070799.md#1" target="_blank">林辉：因如此荒诞理由 他们成为了“右派”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/18/n11597772.md#1" target="_blank">法国解放报：法国应该承诺反对强摘器官</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341345.md#1">【未解之谜】全美最著名“鬼屋” 白宫里的那些灵异事件</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343378.md#1">【全球新闻】应对中共 韩国菲律宾升为战略伙伴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346038.md#1">【秦鹏观察】一对奇葩诺贝尔医学奖得主的故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343377.md#1">【环球直击】哈马斯袭击以色列一周年 各地悼念</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340124.md#1">五样东西 富人能用现金支付而中产不会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344681.md#1">美最新超级航母明年部署太平洋舰队 威慑中共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344745.md#1">女星李一桐搭机光脚蹭座垫 视频曝光引争议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344719.md#1">副歌交由现场观众合唱 李玉刚遭疑“躲高音”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340404.md#1">吃小鱼比大鱼更健康 两类人不宜吃大鱼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339916.md#1">拉筋强肌助眠 改善健康 踮脚尖五好处</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/10/9/n14347309.htm">富士康4台干遭中共拘捕</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545002.md#1">【直播】庆美国独立日 华府燃放烟火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541355.md#1">你应该知道扁豆的所有健康益处</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/10/9/n14347309.htm">富士康4台籍干部遭中共拘捕 陆委会：情节怪异</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347309.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
